--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,6 @@ jobs:
           - '1.5'
           - 'nightly'
         os:
-          - ubuntu-latest
           - macOS-latest
           - windows-latest
         arch:
@@ -40,7 +39,7 @@ jobs:
       - uses: julia-actions/julia-runtest@v1
   docs:
     name: Documentation
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@v1
